# vigil

./: Cargo.toml  README.md  build.rs  flake.nix
src/: app.rs  main.rs
src/app/: display.rs  main.rs  mod.rs
src/runtimes/: mod.rs
src/runtimes/alacritty/: event.rs  mod.rs
src/runtimes/libghostty/: mod.rs
src/runtimes/libghostty/auto_gen/: bindings.rs
src/runtimes/libvigil/: mod.rs
