[package]
name = "vigil"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = [ "process", "term", "socket", "fs", "poll" ] }
vte = { version = "0.15.0", features = [ "ansi", "std" ]}
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
signal-hook = "0.3.17"
lazy_static = "1.5.0"


[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
    "tokio",
    "wayland",
    "wgpu", # IMPORTANT: enable when hyprland fixed the vulkan thingy
    "winit",
    # "advanced"

]

[dependencies.ttf-parser]
version = "0.25"
default-features = false
features = ["opentype-layout", "variable-fonts", "glyph-names", "no-std-float"]


[build-dependencies]
pkg-config = "0.3.17"
bindgen = "0.71.1"
